# devops-cli

./: .gitignore  CLAUDE_CONTEXT.md  COMMANDS_CHEATSHEET.md  OPTIMIZATION_PLAN.md  README.md  REORGANIZATION_SUMMARY.md  SETUP_GUIDE.md  admin.sh  config.example.yaml  developer.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pr-check.yml  release.yml
aws/: developer-readonly-policy.json  setup-developer-access.sh
devops_cli/: __init__.py  main.py
devops_cli/auth/: __init__.py  manager.py  service.py  stores.py  utils.py
devops_cli/commands/: admin.py  app.py  app.py.bak  auth.py  aws_logs.py  dashboard.py  deploy.py  git.py  health.py  logs.py  monitor.py  secrets.py  security.py  ssh.py  website.py
devops_cli/commands/admin/: __init__.py  apps.py  aws.py  base.py  core.py  meetings.py  repos.py  servers.py  teams.py  users.py  websites.py
devops_cli/config/: aws_credentials.py  loader.py  manager.py  repos.py  schemas.py  settings.py  validator.py  websites.py
devops_cli/config/templates/: README.md  apps-template.yaml  aws-credentials-template.yaml  aws-roles-template.yaml  meetings-template.yaml  repos-template.yaml  servers-template.yaml  teams-template.yaml  users-template.yaml  websites-template.yaml
devops_cli/dashboard/: __init__.py  app.py  logic.py  main.py  services.py  utils.py
devops_cli/dashboard/routes/: activity.py  apps.py  auth.py  config.py  github.py  meetings.py  monitoring.py  security.py  servers.py  users.py  websites.py
devops_cli/dashboard/templates/: index.html  index.html.backup  login.html
devops_cli/monitoring/: __init__.py  checker.py  config.py  dashboard.py
devops_cli/utils/: aws_helpers.py  completion.py  config_validator.py  git_helpers.py  github_helper.py  log_formatters.py  output.py  secrets_manager.py  security_scanner.py  time_helpers.py
scripts/: backup-db.sh  deploy-docker.sh  docker-cleanup.sh  log-rotate.sh  server-health.sh  setup-server.sh  ssl-check.sh
tests/: __init__.py  test_cli.py  test_config.py  test_utils.py
(+1 files in other folders)
