[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devops-cli"
version = "1.0.0"
description = "A powerful CLI tool for DevOps workflows - Git, Deployments, Logs, Health Checks"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Your Team", email = "team@startup.com"}
]
dependencies = [
    "typer[all]>=0.9.0,<1.0.0",
    "rich>=13.0.0,<15.0.0",
    "pyyaml>=6.0,<7.0",
    "requests>=2.31.0,<3.0.0",
    "paramiko>=3.0.0,<4.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "boto3>=1.34.0,<2.0.0",
    "httpx>=0.27.0,<1.0.0",
    "fastapi>=0.109.0,<1.0.0",
    "uvicorn>=0.27.0,<1.0.0",
    "jinja2>=3.1.0,<4.0.0",
    "python-multipart>=0.0.6,<1.0.0",
    "cryptography>=42.0.0,<44.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=4.0.0,<6.0.0",
    "black>=23.0.0,<25.0.0",
    "ruff>=0.1.0,<1.0.0",
]

[project.scripts]
devops = "devops_cli.main:app"
dx = "devops_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
